[tool.poetry]
name = "rss_davidjnevin"
version = "0.1.0"
description = ""
authors = ["David J Nevin <66497218+davidjnevin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
