[tool.poetry]
name = "rss_davidjnevin"
version = "0.1.0"
description = "David J Nevin Blog RSS - Search tool"
authors = ["David J Nevin <content@davidjnevin.com>"]


[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search = "rss_davidjnevin.search:main"
